# ros2_nn

./: .gitignore  RBFNN-for-Backstepping-couple-dynamic-  grid_search_results.csv  ket_qua_tim_kiem.csv  ket_qua_tim_kiem_v5.csv  plot_rbfnn_data.py  rbfnn_flight_data.csv  test_arm.py
Ly_thuyet_DATN_Long/: ros2_ws.code-workspace
Ly_thuyet_DATN_Long/.obsidian/: workspace.json
Ly_thuyet_DATN_Long/Lý thuyết/Cơ sở mô hình toán cho UAV/: Mô hình động lực học UAV (dynamic model).md
Ly_thuyet_DATN_Long/Lý thuyết/ĐATN/Các lý thuyết/: Hướng dẫn 4 (gemini 5-3).md  Lý thuyết tổng hợp.md  Phương pháp Điều khiển Backstepping Thích nghi Mạng nơ-ron (Neuro-Adaptive Backstepping)  thiết kế riêng cho hệ sinh thái PX4 + Raspberry Pi 4..md  RBFNN _ tóm gọn.md
Ly_thuyet_DATN_Long/Lý thuyết/ĐATN/Các vấn đề khi viết quyển/: CÁC BƯỚC LÀM VIỆC SAU KHI CODE XONG.md  PROMT LẤY KẾT QUẢ MÔ PHỎNG.md
data/: bag_to_csv.py
src/uam_controller/: CMakeLists.txt  package.xml
src/uam_controller/config/: uam_controller_params.yaml  uam_controller_params.yaml.bak
src/uam_controller/include/uam_controller/: uam_adaptive_controller.hpp
src/uam_controller/launch/: uam_qgc_mode.launch.py  uam_system.launch.py
src/uam_controller/models/: lstm_uam_weights.pth
src/uam_controller/scripts/: arm_dynamics_node.py  arm_gazebo_command_node.py  arm_initial_pose.py  arm_trajectory_generator.py  auto_train_loop.sh  hover_checker.py  lstm_feedforward_node.py  qgc_rbfnn_trigger.py  rbfnn_data_logger.py  rbfnn_training_supervisor.py  run_grid_search.py  train_lstm_offline.py  tune_offsets.py  uam_mission_bridge.py  uam_telemetry_monitor.py
src/uam_controller/src/: uam_backstepping_rbfnn_node.cpp
src/uav_control/: package.xml  setup.py  setup_rpi4.sh
src/uav_control/config/: params.xml
src/uav_control/launch/: uav_bringup_launch.py
src/uav_control/uav_control/: mission_manager.py  offboard_control.py  telemetry_monitor.py
